Fixes and enhncements

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="description" content="Сайт компании 'Одиссея' - Мебель на заказ" />
-    <meta name="author" content="Andrei Pandiurin" />
+    <meta name="description" content="Сайт компании 'Одиссея' - Мебель на заказ | Кухни | Шкафы | Тольятти" />
+    <meta name="author" content="Андрей Пандюрин" />
+    <meta name="copyright" content="Copyright (c)2024 Андрей Пандюрин. Все права защищены." />
+    <meta name="keywords" content="мебель, заказ, ремонт, Одиссея, кухни, шкафы, шкаф-купе, прихожая, Тольятти, Самара" />
     <author><link type="text/plain" rel="author" href="/humans.txt" /></author>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Одиссея - Мебель на заказ</title>
+    <title>Одиссея - Мебель на заказ | Кухни | Шкафы | Тольятти</title>
   </head>
   <body>
     <noscript>
