--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="ru">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,8 +8,52 @@
     <meta name="author" content="Андрей Пандюрин" />
     <meta name="copyright" content="Copyright (c)2024 Андрей Пандюрин. Все права защищены." />
     <meta name="keywords" content="мебель, заказ, ремонт, Одиссея, кухни, шкафы, шкаф-купе, прихожая, Тольятти, Самара" />
+    <meta name="theme-color" content="#f1f1f1" />
+    <meta name="robots" content="index, follow, noodp, noydir, noarchive"/>
+ 
+    <meta property="og:locale" content="ru_RU" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Одиссея - Мебель на заказ | Кухни | Шкафы | Тольятти" />
+    <meta property="og:description" content="Сайт компании 'Одиссея' - Мебель на заказ | Кухни | Шкафы | Тольятти" />
+    <meta property="og:url" content="https://odyssey-mebel.ru/" />
+    <meta property="og:site_name" content="Одиссея - Мебель на заказ | Кухни | Шкафы | Тольятти" />
+    <meta property="og:image" content="https://odyssey-mebel.ru/images/ogimage.jpg" />
+    <meta property="og:image:secure_url" content="https://odyssey-mebel.ru/images/ogimage.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="628" />
+    <meta property="og:image:alt" content="начальный экран с работами" />
+    <meta property="og:image:type" content="image/jpeg" />
+
     <author><link type="text/plain" rel="author" href="/humans.txt" /></author>
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+
+    <link rel="icon" type="image/png" href="icon/favicon/favicon-16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="icon/favicon/favicon-32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="icon/favicon/favicon-96.png" sizes="96x96" />
+
+    <meta name="apple-mobile-web-app-title" content="Одиссея - Мебель на заказ" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="#f1f1f1" />
+    <link rel="apple-touch-icon" sizes="57x57" href="icon/favicon/favicon-57.png" />
+    <link rel="apple-touch-icon" sizes="60x60" href="icon/favicon/favicon-60.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="icon/favicon/favicon-72.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="icon/favicon/favicon-76.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="icon/favicon/favicon-114.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="icon/favicon/favicon-120.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="icon/favicon/favicon-144.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="icon/favicon/favicon-152.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="icon/favicon/favicon-180.png" />
+    
+    <meta name="msapplication-TileColor" content="#f1f1f1" />
+    <meta name="application-name" content="Одиссея - Мебель на заказ" />
+    <meta name="msapplication-tooltip" content="Кухни | Шкафы | Тольятти" />
+    <meta name="msapplication-TileImage" content="icon/favicon/favicon-144.png" />
+    <meta name="msapplication-square70x70logo" content="icon/favicon/favicon-70.png" />
+    <meta name="msapplication-square150x150logo" content="icon/favicon/favicon-150.png" />
+    <meta name="msapplication-wide310x150logo" content="icon/favicon/favicon-310-2.png" />
+    <meta name="msapplication-square310x310logo" content="icon/favicon/favicon-310.png" />
+
     <title>Одиссея - Мебель на заказ | Кухни | Шкафы | Тольятти</title>
   </head>
   <body>
